- Interactable objects - Added tilesets - (WIP)Examinable objects

--- a/Dialog2DayGame.csproj
+++ b/Dialog2DayGame.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Folder Include="Entities\" />
     <Folder Include="Scenes\" />
   </ItemGroup>
 </Project>
